<resources>
    <string name="app_name">TipCalculator-counter</string>
    <string name="numPeople"># of People:</string>
    <string name="mealCost">Meal Price:</string>
    <string name="mealCostInput">Enter Amount</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip20">20%</string>
    <string name="customTip">Custom</string>
    <string name="tipString">Tip:</string>
    <string name="tipVal"></string>
    <string name="totalCost">Total:</string>
    <string name="totalCostVal"></string>
    <string name="perPerson">Total Per Person: </string>
    <string name="perPersonVal"></string>
    <string name="submitButton">Submit</string>
    <string name="resetButton">Reset</string>
</resources>
